[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Cross.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=15]
[ext_resource path="res://Scripts/SettingsHSlider.gd" type="Script" id=16]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -64.0
margin_top = -64.0
margin_right = 384.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="Panel/VBoxContainer"]
margin_left = 71.0
margin_top = 8.0
margin_right = 169.0
margin_bottom = 32.0
focus_mode = 0
size_flags_horizontal = 4
pressed = true
enabled_focus_mode = 0
text = "fullscreen"
align = 1

[node name="Screenshake" type="CheckBox" parent="Panel/VBoxContainer"]
margin_left = 67.0
margin_top = 36.0
margin_right = 172.0
margin_bottom = 60.0
focus_mode = 0
size_flags_horizontal = 4
pressed = true
enabled_focus_mode = 0
text = "screenshake"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 240.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_top = 2.0
margin_right = 106.0
margin_bottom = 14.0
text = "language"
align = 2
valign = 1

[node name="Language" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 16.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "english"
align = 1
icon_align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 240.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 43.0
margin_top = 2.0
margin_right = 113.0
margin_bottom = 14.0
text = "resolution"
align = 2
valign = 1

[node name="Resolution" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 117.0
margin_right = 197.0
margin_bottom = 16.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "1280x720"
align = 1
icon_align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 240.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 34.0
margin_top = 2.0
margin_right = 120.0
margin_bottom = 14.0
text = "sound_volume"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 124.0
margin_right = 172.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 0 )
focus_mode = 0
size_flags_vertical = 1
value = 100.0
script = ExtResource( 16 )
type = "SFX"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 176.0
margin_top = 2.0
margin_right = 205.0
margin_bottom = 14.0
text = "100 %"
align = 2
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 124.0
margin_right = 240.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 33.0
margin_top = 2.0
margin_right = 121.0
margin_bottom = 14.0
text = "music_volume"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 125.0
margin_right = 173.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 0 )
focus_mode = 0
size_flags_vertical = 1
value = 100.0
script = ExtResource( 16 )
type = "Music"

[node name="Label3" type="Label" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 177.0
margin_top = 2.0
margin_right = 206.0
margin_bottom = 14.0
text = "100 %"
align = 2
valign = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 16 )
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer5"]
margin_left = 30.0
margin_top = 2.0
margin_right = 125.0
margin_bottom = 14.0
text = "master_volume"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer5"]
margin_left = 129.0
margin_right = 177.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 0 )
focus_mode = 0
size_flags_vertical = 1
value = 100.0
script = ExtResource( 16 )

[node name="Label4" type="Label" parent="Panel/VBoxContainer/HBoxContainer5"]
margin_left = 181.0
margin_top = 2.0
margin_right = 210.0
margin_bottom = 14.0
text = "100 %"
align = 2
valign = 1

[node name="Cross" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 8 )

[connection signal="mouse_entered" from="Panel/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_mouse_entered"]
[connection signal="toggled" from="Panel/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Screenshake" to="." method="_on_Screenshake_mouse_entered"]
[connection signal="toggled" from="Panel/VBoxContainer/Screenshake" to="." method="_on_Screenshake_toggled"]
[connection signal="item_selected" from="Panel/VBoxContainer/HBoxContainer/Language" to="." method="_on_Language_item_selected"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer/Language" to="." method="_on_Language_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Language" to="." method="_on_Language_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/HBoxContainer2/Resolution" to="." method="_on_Resolution_item_selected"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer2/Resolution" to="." method="_on_Resolution_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Resolution" to="." method="_on_Resolution_pressed"]
[connection signal="drag_started" from="Panel/VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_HSlider_drag_started"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_HSlider_mouse_entered"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="drag_started" from="Panel/VBoxContainer/HBoxContainer4/HSlider" to="." method="_on_HSlider_drag_started2"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer4/HSlider" to="." method="_on_HSlider_mouse_entered2"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer4/HSlider" to="." method="_on_HSlider_value_changed2"]
[connection signal="drag_started" from="Panel/VBoxContainer/HBoxContainer5/HSlider" to="." method="_on_HSlider_drag_started3"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer5/HSlider" to="." method="_on_HSlider_mouse_entered3"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer5/HSlider" to="." method="_on_HSlider_value_changed3"]
